@@ -1,4 +1,4 @@
-libc_extra_cflags = -O3 -g1
+libc_extra_cflags = -O3 -g
 libc_slibdir = /lib
 libc_libdir = /usr/lib
 libc_rtlddir = /lib64
@@ -16,7 +16,7 @@ libc6-i386_shlib_dep = libc6-i386 (>= $(shlib_dep_ver))
 i386_add-ons = nptl $(add-ons)
 i386_configure_target = i486-linux
 i386_CC = $(CC) -m32
-i386_extra_cflags = -march=pentium4 -g1 -O3
+i386_extra_cflags = -march=pentium4 -g -O3
 i386_extra_config_options = $(extra_config_options) --includedir=/usr/include/i486-linux-gnu 
 i386_rtlddir = /lib
 i386_slibdir = /emul/ia32-linux/lib
