@@ -16,7 +16,7 @@ libc0.1-i386_shlib_dep = libc0.1-i386 (>= $(shlib_dep_ver))
 i386_configure_target = i486-kfreebsd
 i386_CC = $(CC) -m32
 i386_add-ons = linuxthreads $(add-ons)
-i386_extra_cflags = -march=pentium4 -g1 -O3
+i386_extra_cflags = -march=pentium4 -g -O3
 i386_extra_config_options = $(extra_config_options) --includedir=/usr/include/i486-kfreebsd-gnu 
 i386_rtlddir = /lib
 i386_slibdir = /lib32
