@@ -68,6 +68,7 @@ glibc (2.5-0exp3) UNRELEASED; urgency=low
   * sysdeps/sparc.mk: install 64-bit headers (actually gnu/stubs-64.h)
     directly into /usr/include and provide /usr/include/sparc64-linux-gnu as
     a symlink to /usr/include for compatibility reasons.  Closes: #403980.
+  * sysdeps/*.mk: build with -g instead of -g1.  Closes: bug#403270. 
 
   [ Denis Barbier ]
   * Remove localedata/locale-en_NZ.diff (merged upstream).
@@ -93,6 +94,9 @@ glibc (2.4-1) UNRELEASED; urgency=low
 
   * New upstream version 2.4:
     - NPTL is used instead of linuxthreads on alpha.  Closes: #325600.
+    - NPTL being the default thread library when available, only one
+      version of the thread library is available (either linuxthreads or
+      NPTL).  Closes: #399035.
     - .eh_frame has been fixed.  Closes: #349688.
     - Fix a memory leak in getprotobyname. Closes: #365233.
     - Support for MALLOC_PERTURB has been added.  Closes: #350579.
